syntax = "proto3";
package primary;


enum RaceType {
    RaceType_ACCELERATION = 0;
    RaceType_SKIDPAD = 1;
    RaceType_AUTOCROSS = 2;
    RaceType_ENDURANCE = 3;
}

enum InverterStatus {
    InverterStatus_OFF = 0;
    InverterStatus_IDLE = 1;
    InverterStatus_ON = 2;
}

enum CarStatus {
    CarStatus_IDLE = 0;
    CarStatus_PRE_SETUP = 1;
    CarStatus_TS_ON = 2;
    CarStatus_POST_SETUP = 3;
    CarStatus_DRIVE = 4;
    CarStatus_TEARDOWN = 5;
}

enum Toggle {
    Toggle_OFF = 0;
    Toggle_ON = 1;
}

enum TsStatus {
    TsStatus_OFF = 0;
    TsStatus_PRECHARGE = 1;
    TsStatus_ON = 2;
    TsStatus_FATAL = 3;
}

enum SetCarStatus {
    SetCarStatus_IDLE = 0;
    SetCarStatus_READY = 1;
    SetCarStatus_DRIVE = 2;
}

enum Bound {
    Bound_SET_MAX = 0;
    Bound_SET_MIN = 1;
}

enum Pedal {
    Pedal_ACCELERATOR = 0;
    Pedal_BRAKE = 1;
}

enum ImdStatus {
    ImdStatus_IMD_SC = 0;
    ImdStatus_IMD_NORMAL = 1;
    ImdStatus_IMD_UNDER_VOLTAGE = 2;
    ImdStatus_IMD_START_MEASURE = 3;
    ImdStatus_IMD_DEVICE_ERROR = 4;
    ImdStatus_IMD_EARTH_FAULT = 5;
}

message BMS_HV_JMP_TO_BLT {
    uint64 _inner_timestamp = 1;
}

message BMS_LV_JMP_TO_BLT {
    uint64 _inner_timestamp = 1;
}

message STEER_VERSION {
    uint32 component_version = 1;
    uint32 canlib_build_time = 2;
    uint64 _inner_timestamp = 3;
}

message DAS_VERSION {
    uint32 component_version = 1;
    uint32 canlib_build_time = 2;
    uint64 _inner_timestamp = 3;
}

message HV_VERSION {
    uint32 component_version = 1;
    uint32 canlib_build_time = 2;
    uint64 _inner_timestamp = 3;
}

message LV_VERSION {
    uint32 component_version = 1;
    uint32 canlib_build_time = 2;
    uint64 _inner_timestamp = 3;
}

message TLM_VERSION {
    uint32 component_version = 1;
    uint32 canlib_build_time = 2;
    uint64 _inner_timestamp = 3;
}

message TIMESTAMP {
    uint32 timestamp = 1;
    uint64 _inner_timestamp = 2;
}

message AMBIENT_TEMPERATURE {
    sint32 temp = 1;
    uint64 _inner_timestamp = 2;
}

message DATA_LOGGER {
    uint32 placeholder1 = 1;
    uint32 placeholder2 = 2;
    uint64 _inner_timestamp = 3;
}

message SET_TLM_STATUS {
    Toggle tlm_status = 1;
    uint64 _inner_timestamp = 2;
}

message TLM_STATUS {
    Toggle tlm_status = 1;
    uint64 _inner_timestamp = 2;
}

message STEER_SYSTEM_STATUS {
    uint32 soc_temp = 1;
    uint64 _inner_timestamp = 2;
}

message HV_VOLTAGE {
    float pack_voltage = 1;
    float bus_voltage = 2;
    float max_cell_voltage = 3;
    float min_cell_voltage = 4;
    uint64 _inner_timestamp = 5;
}

message HV_CURRENT {
    float current = 1;
    float power = 2;
    float energy = 3;
    float soc = 4;
    uint64 _inner_timestamp = 5;
}

message HV_TEMP {
    float average_temp = 1;
    float max_temp = 2;
    float min_temp = 3;
    uint64 _inner_timestamp = 4;
}

message HV_ERRORS {
    uint32 warnings = 1;
    uint32 errors = 2;
    uint64 _inner_timestamp = 3;
}

message HV_CAN_FORWARD {
    Toggle can_forward_set = 1;
    uint64 _inner_timestamp = 2;
}

message HV_FANS_OVERRIDE {
    Toggle fans_override = 1;
    float fans_speed = 2;
    uint64 _inner_timestamp = 3;
}

message HV_CAN_FORWARD_STATUS {
    Toggle can_forward_status = 1;
    uint64 _inner_timestamp = 2;
}

message HV_FANS_OVERRIDE_STATUS {
    Toggle fans_override = 1;
    float fans_speed = 2;
    uint64 _inner_timestamp = 3;
}

message HV_FEEDBACKS_STATUS {
    uint32 feedbacks_status = 1;
    uint32 is_circuitry_error = 2;
    uint64 _inner_timestamp = 3;
}

message HV_IMD_STATUS {
    bool imd_fault = 1;
    ImdStatus imd_status = 2;
    sint32 imd_info = 3;
    uint64 _inner_timestamp = 4;
}

message TS_STATUS_DAS {
    TsStatus ts_status = 1;
    uint64 _inner_timestamp = 2;
}

message TS_STATUS_STEER {
    TsStatus ts_status = 1;
    uint64 _inner_timestamp = 2;
}

message TS_STATUS_HANDCART {
    TsStatus ts_status = 1;
    uint64 _inner_timestamp = 2;
}

message SET_TS_STATUS_DAS {
    Toggle ts_status_set = 1;
    uint64 _inner_timestamp = 2;
}

message SET_TS_STATUS_HANDCART {
    Toggle ts_status_set = 1;
    uint64 _inner_timestamp = 2;
}

message STEER_STATUS {
    float map_pw = 1;
    float map_sc = 2;
    float map_tv = 3;
    uint64 _inner_timestamp = 4;
}

message SET_CAR_STATUS {
    SetCarStatus car_status_set = 1;
    uint64 _inner_timestamp = 2;
}

message SET_PEDALS_RANGE {
    Bound bound = 1;
    Pedal pedal = 2;
    uint64 _inner_timestamp = 3;
}

message SET_STEERING_ANGLE_RANGE {
    Bound bound = 1;
    uint64 _inner_timestamp = 2;
}

message CAR_STATUS {
    InverterStatus inverter_l = 1;
    InverterStatus inverter_r = 2;
    CarStatus car_status = 3;
    uint64 _inner_timestamp = 4;
}

message DAS_ERRORS {
    uint32 das_error = 1;
    uint64 _inner_timestamp = 2;
}

message LV_CURRENT {
    float current = 1;
    uint64 _inner_timestamp = 2;
}

message LV_VOLTAGE {
    float voltage_1 = 1;
    float voltage_2 = 2;
    float voltage_3 = 3;
    float voltage_4 = 4;
    uint64 _inner_timestamp = 5;
}

message LV_TOTAL_VOLTAGE {
    float total_voltage = 1;
    uint64 _inner_timestamp = 2;
}

message LV_TEMPERATURE {
    float bp_temperature_1 = 1;
    float bp_temperature_2 = 2;
    float dcdc12_temperature = 3;
    float dcdc24_temperature = 4;
    uint64 _inner_timestamp = 5;
}

message COOLING_STATUS {
    float radiators_speed = 1;
    float pumps_speed = 2;
    uint64 _inner_timestamp = 3;
}

message SET_RADIATOR_SPEED {
    float radiators_speed = 1;
    uint64 _inner_timestamp = 2;
}

message SET_PUMPS_SPEED {
    float pumps_speed = 1;
    uint64 _inner_timestamp = 2;
}

message SET_INVERTER_CONNECTION_STATUS {
    Toggle status = 1;
    uint64 _inner_timestamp = 2;
}

message INVERTER_CONNECTION_STATUS {
    Toggle status = 1;
    uint64 _inner_timestamp = 2;
}

message LV_ERRORS {
    uint32 warnings = 1;
    uint32 errors = 2;
    uint64 _inner_timestamp = 3;
}

message SHUTDOWN_STATUS {
    bool input = 1;
    bool output = 2;
    uint64 _inner_timestamp = 3;
}

message MARKER {
    uint64 _inner_timestamp = 1;
}

message HV_CELLS_VOLTAGE {
    uint32 start_index = 1;
    float voltage_0 = 2;
    float voltage_1 = 3;
    float voltage_2 = 4;
    uint64 _inner_timestamp = 5;
}

message HV_CELLS_TEMP {
    uint32 start_index = 1;
    float temp_0 = 2;
    float temp_1 = 3;
    float temp_2 = 4;
    float temp_3 = 5;
    float temp_4 = 6;
    float temp_5 = 7;
    uint64 _inner_timestamp = 8;
}

message HV_CELL_BALANCING_STATUS {
    Toggle balancing_status = 1;
    uint64 _inner_timestamp = 2;
}

message SET_CELL_BALANCING_STATUS {
    Toggle set_balancing_status = 1;
    uint64 _inner_timestamp = 2;
}

message HANDCART_STATUS {
    bool connected = 1;
    uint64 _inner_timestamp = 2;
}

message SPEED {
    float encoder_r = 1;
    float encoder_l = 2;
    float inverter_r = 3;
    float inverter_l = 4;
    uint64 _inner_timestamp = 5;
}

message INV_L_REQUEST {
    uint32 data_0 = 1;
    uint32 data_1 = 2;
    uint32 data_2 = 3;
    uint32 data_3 = 4;
    uint32 data_4 = 5;
    uint32 data_5 = 6;
    uint32 data_6 = 7;
    uint32 data_7 = 8;
    uint64 _inner_timestamp = 9;
}

message INV_R_REQUEST {
    uint32 data_0 = 1;
    uint32 data_1 = 2;
    uint32 data_2 = 3;
    uint32 data_3 = 4;
    uint32 data_4 = 5;
    uint32 data_5 = 6;
    uint32 data_6 = 7;
    uint32 data_7 = 8;
    uint64 _inner_timestamp = 9;
}

message INV_L_RESPONSE {
    uint32 reg_id = 1;
    uint32 data_0 = 2;
    uint32 data_1 = 3;
    uint32 data_2 = 4;
    uint32 data_3 = 5;
    uint32 data_4 = 6;
    uint32 data_5 = 7;
    uint32 data_6 = 8;
    uint64 _inner_timestamp = 9;
}

message INV_R_RESPONSE {
    uint32 reg_id = 1;
    uint32 data_0 = 2;
    uint32 data_1 = 3;
    uint32 data_2 = 4;
    uint32 data_3 = 5;
    uint32 data_4 = 6;
    uint32 data_5 = 7;
    uint32 data_6 = 8;
    uint64 _inner_timestamp = 9;
}

message FLASH_CELLBOARD_0_TX {
    uint64 _inner_timestamp = 1;
}

message FLASH_CELLBOARD_0_RX {
    uint64 _inner_timestamp = 1;
}

message FLASH_CELLBOARD_1_TX {
    uint64 _inner_timestamp = 1;
}

message FLASH_CELLBOARD_1_RX {
    uint64 _inner_timestamp = 1;
}

message FLASH_CELLBOARD_2_TX {
    uint64 _inner_timestamp = 1;
}

message FLASH_CELLBOARD_2_RX {
    uint64 _inner_timestamp = 1;
}

message FLASH_CELLBOARD_3_TX {
    uint64 _inner_timestamp = 1;
}

message FLASH_CELLBOARD_3_RX {
    uint64 _inner_timestamp = 1;
}

message FLASH_CELLBOARD_4_TX {
    uint64 _inner_timestamp = 1;
}

message FLASH_CELLBOARD_4_RX {
    uint64 _inner_timestamp = 1;
}

message FLASH_CELLBOARD_5_TX {
    uint64 _inner_timestamp = 1;
}

message FLASH_CELLBOARD_5_RX {
    uint64 _inner_timestamp = 1;
}

message FLASH_BMS_HV_TX {
    uint64 _inner_timestamp = 1;
}

message FLASH_BMS_HV_RX {
    uint64 _inner_timestamp = 1;
}

message FLASH_BMS_LV_TX {
    uint64 _inner_timestamp = 1;
}

message FLASH_BMS_LV_RX {
    uint64 _inner_timestamp = 1;
}

message BRUSA_NLG5_CTL {
    uint64 _inner_timestamp = 1;
}

message BRUSA_ST {
    uint64 _inner_timestamp = 1;
}

message BRUSA_ACT_I {
    uint64 _inner_timestamp = 1;
}

message BRUSA_ACT_II {
    uint64 _inner_timestamp = 1;
}

message BRUSA_TEMP {
    uint64 _inner_timestamp = 1;
}

message BRUSA_ERR {
    uint64 _inner_timestamp = 1;
}

message CONTROL_OUTPUT {
    float estimated_velocity = 1;
    float tmax_r = 2;
    float tmax_l = 3;
    float torque_l = 4;
    float torque_r = 5;
    uint64 _inner_timestamp = 6;
}

message LC_RESET {
    uint64 _inner_timestamp = 1;
}


message Pack {
    repeated BMS_HV_JMP_TO_BLT BMS_HV_JMP_TO_BLT = 1;
    repeated BMS_LV_JMP_TO_BLT BMS_LV_JMP_TO_BLT = 2;
    repeated STEER_VERSION STEER_VERSION = 3;
    repeated DAS_VERSION DAS_VERSION = 4;
    repeated HV_VERSION HV_VERSION = 5;
    repeated LV_VERSION LV_VERSION = 6;
    repeated TLM_VERSION TLM_VERSION = 7;
    repeated TIMESTAMP TIMESTAMP = 8;
    repeated AMBIENT_TEMPERATURE AMBIENT_TEMPERATURE = 9;
    repeated DATA_LOGGER DATA_LOGGER = 10;
    repeated SET_TLM_STATUS SET_TLM_STATUS = 11;
    repeated TLM_STATUS TLM_STATUS = 12;
    repeated STEER_SYSTEM_STATUS STEER_SYSTEM_STATUS = 13;
    repeated HV_VOLTAGE HV_VOLTAGE = 14;
    repeated HV_CURRENT HV_CURRENT = 15;
    repeated HV_TEMP HV_TEMP = 16;
    repeated HV_ERRORS HV_ERRORS = 17;
    repeated HV_CAN_FORWARD HV_CAN_FORWARD = 18;
    repeated HV_FANS_OVERRIDE HV_FANS_OVERRIDE = 19;
    repeated HV_CAN_FORWARD_STATUS HV_CAN_FORWARD_STATUS = 20;
    repeated HV_FANS_OVERRIDE_STATUS HV_FANS_OVERRIDE_STATUS = 21;
    repeated HV_FEEDBACKS_STATUS HV_FEEDBACKS_STATUS = 22;
    repeated HV_IMD_STATUS HV_IMD_STATUS = 23;
    repeated TS_STATUS_DAS TS_STATUS_DAS = 24;
    repeated TS_STATUS_STEER TS_STATUS_STEER = 25;
    repeated TS_STATUS_HANDCART TS_STATUS_HANDCART = 26;
    repeated SET_TS_STATUS_DAS SET_TS_STATUS_DAS = 27;
    repeated SET_TS_STATUS_HANDCART SET_TS_STATUS_HANDCART = 28;
    repeated STEER_STATUS STEER_STATUS = 29;
    repeated SET_CAR_STATUS SET_CAR_STATUS = 30;
    repeated SET_PEDALS_RANGE SET_PEDALS_RANGE = 31;
    repeated SET_STEERING_ANGLE_RANGE SET_STEERING_ANGLE_RANGE = 32;
    repeated CAR_STATUS CAR_STATUS = 33;
    repeated DAS_ERRORS DAS_ERRORS = 34;
    repeated LV_CURRENT LV_CURRENT = 35;
    repeated LV_VOLTAGE LV_VOLTAGE = 36;
    repeated LV_TOTAL_VOLTAGE LV_TOTAL_VOLTAGE = 37;
    repeated LV_TEMPERATURE LV_TEMPERATURE = 38;
    repeated COOLING_STATUS COOLING_STATUS = 39;
    repeated SET_RADIATOR_SPEED SET_RADIATOR_SPEED = 40;
    repeated SET_PUMPS_SPEED SET_PUMPS_SPEED = 41;
    repeated SET_INVERTER_CONNECTION_STATUS SET_INVERTER_CONNECTION_STATUS = 42;
    repeated INVERTER_CONNECTION_STATUS INVERTER_CONNECTION_STATUS = 43;
    repeated LV_ERRORS LV_ERRORS = 44;
    repeated SHUTDOWN_STATUS SHUTDOWN_STATUS = 45;
    repeated MARKER MARKER = 46;
    repeated HV_CELLS_VOLTAGE HV_CELLS_VOLTAGE = 47;
    repeated HV_CELLS_TEMP HV_CELLS_TEMP = 48;
    repeated HV_CELL_BALANCING_STATUS HV_CELL_BALANCING_STATUS = 49;
    repeated SET_CELL_BALANCING_STATUS SET_CELL_BALANCING_STATUS = 50;
    repeated HANDCART_STATUS HANDCART_STATUS = 51;
    repeated SPEED SPEED = 52;
    repeated INV_L_REQUEST INV_L_REQUEST = 53;
    repeated INV_R_REQUEST INV_R_REQUEST = 54;
    repeated INV_L_RESPONSE INV_L_RESPONSE = 55;
    repeated INV_R_RESPONSE INV_R_RESPONSE = 56;
    repeated FLASH_CELLBOARD_0_TX FLASH_CELLBOARD_0_TX = 57;
    repeated FLASH_CELLBOARD_0_RX FLASH_CELLBOARD_0_RX = 58;
    repeated FLASH_CELLBOARD_1_TX FLASH_CELLBOARD_1_TX = 59;
    repeated FLASH_CELLBOARD_1_RX FLASH_CELLBOARD_1_RX = 60;
    repeated FLASH_CELLBOARD_2_TX FLASH_CELLBOARD_2_TX = 61;
    repeated FLASH_CELLBOARD_2_RX FLASH_CELLBOARD_2_RX = 62;
    repeated FLASH_CELLBOARD_3_TX FLASH_CELLBOARD_3_TX = 63;
    repeated FLASH_CELLBOARD_3_RX FLASH_CELLBOARD_3_RX = 64;
    repeated FLASH_CELLBOARD_4_TX FLASH_CELLBOARD_4_TX = 65;
    repeated FLASH_CELLBOARD_4_RX FLASH_CELLBOARD_4_RX = 66;
    repeated FLASH_CELLBOARD_5_TX FLASH_CELLBOARD_5_TX = 67;
    repeated FLASH_CELLBOARD_5_RX FLASH_CELLBOARD_5_RX = 68;
    repeated FLASH_BMS_HV_TX FLASH_BMS_HV_TX = 69;
    repeated FLASH_BMS_HV_RX FLASH_BMS_HV_RX = 70;
    repeated FLASH_BMS_LV_TX FLASH_BMS_LV_TX = 71;
    repeated FLASH_BMS_LV_RX FLASH_BMS_LV_RX = 72;
    repeated BRUSA_NLG5_CTL BRUSA_NLG5_CTL = 73;
    repeated BRUSA_ST BRUSA_ST = 74;
    repeated BRUSA_ACT_I BRUSA_ACT_I = 75;
    repeated BRUSA_ACT_II BRUSA_ACT_II = 76;
    repeated BRUSA_TEMP BRUSA_TEMP = 77;
    repeated BRUSA_ERR BRUSA_ERR = 78;
    repeated CONTROL_OUTPUT CONTROL_OUTPUT = 79;
    repeated LC_RESET LC_RESET = 80;
}